code cleanup, disabled tests gelöschtt